--- a/coding101/index.html
+++ b/coding101/index.html
@@ -9,6 +9,6 @@
   <p id="paragraph1">i am a 14 year old about to go into highschool and in a coding class now, and when i get into highschool. Though in highschool the other people in the clas will be closer to my age than everyone else in this class.</p>
   	<h2>hobby's</h2>
   	<p id="paragraph2"> anime, video games, hockey,</p>
-  	<img src="href="https://gvzoo.com/cms-data/gallery/blog/animals/capybara/capybara-library.jpg"">
+  	<img src="https://gvzoo.com/cms-data/gallery/blog/animals/capybara/capybara-library.jpg">
 </body>
 </html>
